; ModuleID = '/home/carl/AnghaBench/systemd/src/shared/extr_sysctl-util.c_sysctl_write_ip_property.c'
source_filename = "/home/carl/AnghaBench/systemd/src/shared/extr_sysctl-util.c_sysctl_write_ip_property.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@AF_INET = common dso_local global i32 0, align 4
@AF_INET6 = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [18 x i8] c"/proc/sys/net/ipv\00", align 1
@.str.1 = private unnamed_addr constant [2 x i8] c"4\00", align 1
@.str.2 = private unnamed_addr constant [2 x i8] c"6\00", align 1
@.str.3 = private unnamed_addr constant [7 x i8] c"/conf/\00", align 1
@.str.4 = private unnamed_addr constant [1 x i8] zeroinitializer, align 1
@.str.5 = private unnamed_addr constant [2 x i8] c"/\00", align 1
@.str.6 = private unnamed_addr constant [21 x i8] c"Setting '%s' to '%s'\00", align 1
@WRITE_STRING_FILE_VERIFY_ON_FAILURE = common dso_local global i32 0, align 4
@WRITE_STRING_FILE_DISABLE_BUFFER = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @sysctl_write_ip_property(i32 %0, i8* %1, i8* %2, i8* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i8*, align 8
  store i32 %0, i32* %5, align 4
  store i8* %1, i8** %6, align 8
  store i8* %2, i8** %7, align 8
  store i8* %3, i8** %8, align 8
  %10 = load i32, i32* %5, align 4
  %11 = load i32, i32* @AF_INET, align 4
  %12 = load i32, i32* @AF_INET6, align 4
  %13 = call i8* @IN_SET(i32 %10, i32 %11, i32 %12)
  %14 = call i32 @assert(i8* %13)
  %15 = load i8*, i8** %7, align 8
  %16 = call i32 @assert(i8* %15)
  %17 = load i8*, i8** %8, align 8
  %18 = call i32 @assert(i8* %17)
  %19 = load i32, i32* %5, align 4
  %20 = load i32, i32* @AF_INET, align 4
  %21 = icmp eq i32 %19, %20
  %22 = zext i1 %21 to i64
  %23 = select i1 %21, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.1, i64 0, i64 0), i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.2, i64 0, i64 0)
  %24 = load i8*, i8** %6, align 8
  %25 = icmp ne i8* %24, null
  %26 = zext i1 %25 to i64
  %27 = select i1 %25, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.3, i64 0, i64 0), i8* getelementptr inbounds ([1 x i8], [1 x i8]* @.str.4, i64 0, i64 0)
  %28 = load i8*, i8** %6, align 8
  %29 = call i32 @strempty(i8* %28)
  %30 = load i8*, i8** %7, align 8
  %31 = getelementptr inbounds i8, i8* %30, i64 0
  %32 = load i8, i8* %31, align 1
  %33 = sext i8 %32 to i32
  %34 = icmp eq i32 %33, 47
  %35 = zext i1 %34 to i64
  %36 = select i1 %34, i8* getelementptr inbounds ([1 x i8], [1 x i8]* @.str.4, i64 0, i64 0), i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.5, i64 0, i64 0)
  %37 = load i8*, i8** %7, align 8
  %38 = call i8* @strjoina(i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str, i64 0, i64 0), i8* %23, i8* %27, i32 %29, i8* %36, i8* %37)
  store i8* %38, i8** %9, align 8
  %39 = load i8*, i8** %9, align 8
  %40 = load i8*, i8** %8, align 8
  %41 = call i32 @log_debug(i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str.6, i64 0, i64 0), i8* %39, i8* %40)
  %42 = load i8*, i8** %9, align 8
  %43 = load i8*, i8** %8, align 8
  %44 = load i32, i32* @WRITE_STRING_FILE_VERIFY_ON_FAILURE, align 4
  %45 = load i32, i32* @WRITE_STRING_FILE_DISABLE_BUFFER, align 4
  %46 = or i32 %44, %45
  %47 = call i32 @write_string_file(i8* %42, i8* %43, i32 %46)
  ret i32 %47
}

declare dso_local i32 @assert(i8*) #1

declare dso_local i8* @IN_SET(i32, i32, i32) #1

declare dso_local i8* @strjoina(i8*, i8*, i8*, i32, i8*, i8*) #1

declare dso_local i32 @strempty(i8*) #1

declare dso_local i32 @log_debug(i8*, i8*, i8*) #1

declare dso_local i32 @write_string_file(i8*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
